Minor improvements during review
Signed-off-by: Joel Bartelheimer <joel.bartelheimer@bosch.io>